Updated MoziCsillag (HU)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.01.16.01
+-MoziCsillag frissítve
 #2023.11.26.01
 -FilmVilág2, illetve PornWhite, PornRewind, RedTube javítva (XXX)
 #2023.11.18.01
