--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.01.19.01
+-Added new hosts: X-CUM, JizzBunker * Fixed FamilyPorn, PornOne, AmateurPorn
 #2024.01.18.01
 -Videa.hu javítva
 #2024.01.16.01
