Fixed 4Tube, ZBPorn, HomeMoviesTube, HomePornKing

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,5 +1,7 @@
+#2024.01.23.01
+4Tube, ZBPorn, HomeMoviesTube, HomePornKing javítva
 #2024.01.19.01
--Added new hosts: X-CUM, JizzBunker * Fixed FamilyPorn, PornOne, AmateurPorn
+-X-CUM, JizzBunker hozzáadva * FamilyPorn, PornOne, AmateurPorn javítva
 #2024.01.18.01
 -Videa.hu javítva
 #2024.01.16.01
