--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.01.26.01
+EPorner javítva, 4K és Full HD támogatás hozzáadva a HQPorner oldalhoz
 #2024.01.23.01
 4Tube, ZBPorn, HomeMoviesTube, HomePornKing javítva
 #2024.01.19.01
