Added new host: HellMoms * Fixed Motherless

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.01.30.01
+Új host: HellMoms hozzáadva * Motherless javítva
 #2024.01.26.01
 EPorner javítva, 4K és Full HD támogatás hozzáadva a HQPorner oldalhoz
 #2024.01.23.01
