Added new hosts: MustJav, FullXCinema

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.02.04.01
+Új hostok: MustJav, FullXCinema hozzáadva
 #2024.01.30.01
 Új host: HellMoms hozzáadva * Motherless javítva
 #2024.01.26.01
