--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.02.06.01
+Felbontás-választó hozzáadva a HQPorner oldalhoz
 #2024.02.04.01
 Új hostok: MustJav, FullXCinema hozzáadva
 #2024.01.30.01
