--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2024.04.23.01
+VOE.SX linkek támogatása javítva (MoziCsillag)
 #2024.04.16.01
 MoziCsillag javítva, Összetevők frissítve
 #2024.03.25.01
