Added PannonRTV (Beta)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,7 +1,27 @@
+#2024.08.16.02
+PannonRTV hozzáadva (Beta)
+#2024.08.16.01
+XXX Host Prémium változat hozzáadva
+#2024.08.09.01
+XXX Host Prémium változat hozzáadva
+#2024.08.02.01
+XXX Host Prémium változat hozzáadva
+#2024.07.26.01
+XXX Host Prémium változat hozzáadva
+#2024.07.23.01
+YouTube javítva, MoziCsillag frissítve
 #2024.07.12.01
 YouTube javítva
 #2024.07.11.01
 Összetevők frissítése
+#2024.07.05.01
+XXX Host Prémium változat hozzáadva 
+#2024.06.28.01
+XXX Host Prémium változat hozzáadva
+#2024.06.21.01
+XXX Host Prémium változat hozzáadva
+#2024.06.14.01
+XXX Host Prémium változat hozzáadva
 #2024.06.07.01
 Frissítések, javítások
 #2024.05.10.01
