--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,17 @@
+#2024.10.14.01
+YouTube javítva
+#2024.09.27.01
+XXX Host Prémium változat hozzáadva 
+#2024.09.20.01
+XXX Host Prémium változat hozzáadva 
+#2024.09.13.01
+XXX Host Prémium változat hozzáadva 
+#2024.09.06.01
+XXX Host Prémium változat hozzáadva 
+#2024.08.30.01
+XXX Host Prémium változat hozzáadva 
+#2024.08.23.01
+XXX Host Prémium változat hozzáadva 
 #2024.08.17.01
 MoziCsillag javítva
 #2024.08.16.02
