--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,23 @@
+#2025.01.14.01
+Összetevők frissítve
+#2024.12.21.01
+YouTube javítva
+#2024.12.20.
+XXX Host Prémium változat hozzáadva
+#2024.12.13.
+XXX Host Prémium változat hozzáadva
+#2024.12.06.
+XXX Host Prémium változat hozzáadva
+#2024.11.29
+XXX Host Prémium változat hozzáadva
+#2024.11.22
+XXX Host Prémium változat hozzáadva
+#2024.11.15
+XXX Host Prémium változat hozzáadva
+#2024.11.08
+XXX Host Prémium változat hozzáadva
+#2024.11.01
+XXX Host Prémium változat hozzáadva
 #2024.10.26.02
 YouTube javítva (Élő)
 #2024.10.26.01
