Időkép, Pannon RTV fixed (Hungary)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,21 @@
+#2025.07.25.
+Pannon RTV javítva, IdőKép javítva
+#2025.07.11.
+XXX Host Prémium változat hozzáadva
+#2025.07.04.
+XXX Host Prémium változat hozzáadva
+#2025.06.27.
+XXX Host Prémium változat hozzáadva
+#2025.06.20.
+XXX Host Prémium változat hozzáadva
+#2025.06.13.
+XXX Host Prémium változat hozzáadva
+#2025.06.06.
+XXX Host Prémium változat hozzáadva
+#2025.05.30.
+XXX Host Prémium változat hozzáadva
+#2025.05.23.
+XXX Host Prémium változat hozzáadva
 #2025.05.20.
 Filmvilág2 frissítve
 #2025.05.18.
